fixed up issue #10

--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -17,7 +17,7 @@
 
     <p>Our primary <strong>source of data</strong> are the supplementary materials of the relevant <a href="{% url 'papers:all' %}"><strong>publications</strong></a>. On top of that, <a href="{% url 'contributors' %}">many authors</a> have contributed more complete and previously unpublished versions of their datasets (e.g., raw quantitative values from which the published hit list was derived). These datasets will be specifically flagged to emphasize their special status.</p>
 
-    <p>As of today, we are at the data gathering stage. The plan is to collect, organize and share in a <strong>standardized format</strong> all of the phenotypic data obtained by the yeast community. Updates on progress wil5Al be released via this website.</p>
+    <p>As of today, we are at the data gathering stage. The plan is to collect, organize and share in a <strong>standardized format</strong> all of the phenotypic data obtained by the yeast community. Updates on progress will be released via this website.</p>
 
   </div>{# col-md-7 #}<div class="col-md-5">
     <aside>{% include "search.html" %}</aside>
