--- a/papers/templates/zip.html
+++ b/papers/templates/zip.html
@@ -1,5 +1,5 @@
 {% if paper.download_path_exists %}
-<a class="btn btn-primary" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
+<a class="btn btn-success" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
 {% else %}<div title="Unable to locate data files">
-  <a class="btn btn-primary disabled" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
+  <a class="btn btn-warning disabled" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
 </div>{% endif %}
