set text-nowrap for FirstAuthor~LastAuthor, year column as requested in issue #7.

--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -44,7 +44,7 @@ $(document).ready(function(){
   <thead>
     <tr>
       <th>PMID</th>
-      <th>FirstAuthor~LastAuthor, Year</span></th>
+      <th class="text-nowrap">FirstAuthor~LastAuthor, Year</th>
       <th>Phenotypes</th>
       <th>Conditions</th>
       {% if request.GET.verbose >= 1 %}
