fixes up about page discussed in issues #11 and #12

--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-{% include "head.html" with JavaScript='bootstrap' %}
+{% include "head.html" %}
 <title>{{ TITLE }}</title>
 </head><body><div class="container">
 
