--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,39 +1,4 @@
 <footer class="container">
-  <address>
-    For comments &amp; feedback: <a class="email" href="mailto:abarysh@princeton.edu" title="Please, send whatever you have.">abarysh@princeton.edu</a>.
-  </address>
-
-  {% if 'bootstrap' in JavaScript %}
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#about">About</button>
-
-  <div id="about" class="modal fade" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-	<div class="modal-header">
-	  <h3>About</h3>
-	</div><div class="modal-body">
-	  <p>YeastPhenome.org collects phenotypic data derived from <strong>systematic screens</strong> of large-scale <screen>mutant collections</screen> in budding yeast Saccharomyces cerevisiae. Our goal is to study the relationship between different mutant phenotypes and integrate them into mapping of the functional organization of biological pathways.</p>
-
-	  <p>We are interested in both <strong>quantitative</strong> and <strong>qualitative</strong> phenotypes, as long as, for a given study, the data were collected systematically and for a large number of mutants.</p>
-
-	  <p>Our primary <strong>source of data</strong> are the supplementary materials of the relevant <a href="{% url 'papers:all' %}"><strong>publications</strong></a> On top of that, <a href="{% url 'contributors' %}">many authors</a> have contributed more complete and previously unpublished versions of their datasets (e.g., raw quantitative values from which the published hit list was derived). These datasets will be specifically flagged to emphasize their special status.</p>
-
-	  <p>As of today, we are at the data gathering stage. The plan is to collect, organize and share in a <strong>standardized format</strong> all of the phenotypic data obtained by the yeast community. Updates on progress will be released via this website.</p>
-
-	  <p>Yeastphenome.org was created and is being maintained at <a class="external" href="http://www.princeton.edu/">Princeton University</a> by:</p>
-
-	  <ul>
-	    <li>Anastasia Baryshnikova (principal investigator, <a class="external" href="http://www.baryshnikova-lab.org">www.baryshnikova-lab.org</a>)</li>
-	    <li>Sven Heinicke (database and website support)</li>
-	    <li>Fan Kang (database support)</li>
-	    <li>Mark Schroeder (server support)</li>
-	    <li>Rose Oughtred (literature curator)</li>
-	    <li>Christie Chang (literature curator)</li>
-	    <li>Brianna Richardson (undergraduate student)</li>
-	  </ul>
-	</div>
-      </div>
-    </div>
-  </div>
-  {% endif %}
+  <address>For comments &amp; feedback: <a class="email" href="mailto:abarysh@princeton.edu" title="Please, send whatever you have.">abarysh@princeton.edu</a>.</address>
+  <nav><a class="btn btn-info" href="{% url 'about' %}">About</a></nav>
 </footer>
