--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -18,9 +18,9 @@
 <div class="row">
   <div class="col-md-8">{% if 0 != object.pmid %}
     <p>PMID <a class="external" href="http://www.ncbi.nlm.nih.gov/pubmed/{{ object.pmid }}/">{{ object.pmid }}</a></p>
-    {% endif %}</div><div class="col-md-4">{% if paper.has_data %}
+    {% endif %}</div><div class="col-md-4">
     <div class="pull-right">{% include "zip.html" %}</div>
-    {% endif %}</div>
+    </div>
 </div{# row #}>
 
 {% if object.dataset_set.all %}
