--- a/papers/templates/zip.html
+++ b/papers/templates/zip.html
@@ -1,5 +1,7 @@
-{% if paper.download_path_exists %}
+{% if paper.raw_available_data %}
 <a class="btn btn-success" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
-{% else %}<div title="Unable to locate data files">
-  <a class="btn btn-warning disabled" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
-</div>{% endif %}
+{% else %}
+<div title="{% if paper.should_have_data %}Unable to locate data files{% else %}No data loaded{% endif %}">
+  <a class="btn btn-success disabled" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
+</div>
+{% endif %}
