--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 {% include "head.html" with JavaScript='tablesorter' %}
-<title>{{ TITLE }} / Papers / {{ object }}</title>
+<title>{{ SITE_NAME }} / Papers / {{ object }}</title>
 <script>$(document).ready(function(){ 
  $("#papersTable").tablesorter({headers:{
   3:{sorter:false},
@@ -11,7 +11,7 @@
 </head><body><div class="container">
 
  <hgroup>
-   <nav><a href="{% url 'index' %}">{{ TITLE }}</a> / <a href="{% url 'papers:all' %}">Papers</a> /</nav>
+   <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> / <a href="{% url 'papers:all' %}">Papers</a> /</nav>
    <h1>{{ object }}</h1>
  </hgroup>
 
