--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 {% include "head.html" %}
-<title>{{ TITLE }}</title>
+<title>{{ SITE_NAME }}</title>
 </head><body><div class="container">
 
 <hgroup>
-  <dav><a href="{% url 'index' %}">{{ TITLE }}</a> / </nav>
+  <dav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> / </nav>
   <h1>About</h1>
 </hgroup>
 
