--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 {% include "head.html" with JavaScript='tablesorter' %}
-<title>{{ TITLE }} / Conditions / {{ object|capfirst }}</title>
+<title>{{ SITE_NAME }} / Conditions / {{ object|capfirst }}</title>
 <script>$(document).ready(function(){ 
  $("#papersTable").tablesorter(); 
 });</script>
 </head><body><div class="container">
 
 <hgroup>
-  <nav><a href="{% url 'index' %}">{{ TITLE }}</a> / <a href="{% url 'conditions:index' %}">Conditions</a> /</nav>
+  <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> / <a href="{% url 'conditions:index' %}">Conditions</a> /</nav>
   <h1>{{ object|capfirst }}</h1>
 </hgroup>
 
