--- a/papers/templates/papers/contributors.html
+++ b/papers/templates/papers/contributors.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}<!DOCTYPE html>
 <html lang="en"><head>
 {% include "head.html" with JavaScript='tablesorter' %}
-<title>{{ TITLE }} / Contributors</title>
+<title>{{ SITE_NAME }} / Contributors</title>
 <script>
 $(document).ready(function(){ 
  $("#papersTable").tablesorter(); 
@@ -10,7 +10,7 @@ $(document).ready(function(){
 </head><body><div class="container">
 
 <hgroup >
-  <nav><a href="{% url 'index' %}">{{ TITLE }}</a> /</nav>
+  <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> /</nav>
   <h1>Contributors</h1>
 </hgroup>
 
