--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 {% include "head.html" %}
-<title>{{ TITLE }}</title>
+<title>{{ SITE_NAME }}</title>
 </head><body><div class="container">
 
 <hgroup>
-  <h1>{{ TITLE }} <small>Database of systematic mutant phenotypes in yeast</small></h1>
+  <h1>{{ SITE_NAME }} <small>Database of systematic mutant phenotypes in yeast</small></h1>
 </hgroup>
 
 <div class="row">
