fixed up issue #16,#17.

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -8,7 +8,7 @@
   4:{sorter:false}
  }});
 });</script>
-</head><body><div class="container">
+</head><body><div class="container-fluid">
 
  <hgroup>
    <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> / <a href="{% url 'papers:all' %}">Papers</a> /</nav>
