--- a/phenotypes/templates/phenotypes/detail.html
+++ b/phenotypes/templates/phenotypes/detail.html
@@ -5,7 +5,7 @@
 <script>$(document).ready(function(){ 
  $("#papersTable").tablesorter(); 
 });</script>
-</head><body><div class="container">
+</head><body><div class="container-fluid">
   
 <hgroup>
   <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> / <a href="{% url 'phenotypes:index' %}">Phenotypes</a> /</nav>
