--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="container">
+<footer>
   <address>For comments &amp; feedback: <a class="email" href="mailto:abarysh@princeton.edu" title="Please, send whatever you have.">abarysh@princeton.edu</a>.</address>
-  <nav><a class="btn btn-info" href="{% url 'about' %}">About</a></nav>
+  <nav><a href="{% url 'about' %}">About</a></nav>
 </footer>
