--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 {% include "head.html" %}
 <title>{{ SITE_NAME }}</title>
-</head><body><div class="container">
+</head><body><div class="container-fluid">
 
 <hgroup>
   <h1>{{ SITE_NAME }} <small>Database of systematic mutant phenotypes in yeast</small></h1>
