--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -6,7 +6,7 @@
 $(document).ready(function(){ 
  $("#papersTable").tablesorter(); 
 });</script>
-</head><body><div class="container">
+</head><body><div class="container-fluid">
 
 <div class="row">
   <hgroup class="col-md-7">
