--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 {% include "head.html" %}
 <title>{{ SITE_NAME }}</title>
-</head><body><div class="container">
+</head><body><div class="container-fluid">
 
 <hgroup>
   <dav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> / </nav>
