--- a/papers/templates/zip.html
+++ b/papers/templates/zip.html
@@ -1,7 +1,7 @@
 {% if paper.raw_available_data %}
-<a class="btn btn-success" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
+<a class="btn btn-success" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download data</a>
 {% else %}
 <div title="{% if paper.should_have_data %}Unable to locate data files{% else %}No data loaded{% endif %}">
-  <a class="btn btn-success disabled" href="{% url 'papers:zipo' pk=paper.pk %}">Download Data</a>
+  <a class="btn btn-success disabled" href="{% url 'papers:zipo' pk=paper.pk %}">Download data</a>
 </div>
 {% endif %}
