--- a/papers/templates/papers/contributors.html
+++ b/papers/templates/papers/contributors.html
@@ -1,18 +1,12 @@
 {% load staticfiles %}<!DOCTYPE html>
 <html lang="en"><head>
-{% include "head.html" with JavaScript='tablesorter' %}
 <title>{{ SITE_NAME }} / Contributors</title>
-<script>
-$(document).ready(function(){ 
- $("#papersTable").tablesorter(); 
-}); 
-</script>
-</head><body><div class="container-fluid">
+{% include "head.html" with JavaScript='tablesorter' %}
+<div class="container-fluid">
 
-<hgroup >
-  <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> /</nav>
-  <h1>Contributors</h1>
-</hgroup>
+<ol class="breadcrumb">
+  <li>Contributors</li>
+</ol>
 
 <p>A special thanks goes to the authors of these <strong>{{ papers_list.count }} <a href="{% url 'papers:all' %}">publications</a></strong> who have provided unpublished versions of their datasets, including raw quantitative data and/or lists of tested genes.</p>
 
@@ -40,7 +34,15 @@ $(document).ready(function(){
 <p>No papers are available.</p>
 {% endif %}
 
-</div>{# container #}</body></html>
+</div{# container-fluid #}>
+
+<script>
+$(document).ready(function(){
+ $("#papersTable").tablesorter();
+});
+</script>
+
+</body></html>
 
 
 
