--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en"><head><title>{{ SITE_NAME }}</title>
 {% include "head.html" %}
-<title>{{ SITE_NAME }}</title>
-</head><body><div class="container-fluid">
+<div class="container-fluid">
 
-<hgroup>
-  <h1>{{ SITE_NAME }} <small>Database of systematic mutant phenotypes in yeast</small></h1>
-</hgroup>
+<h1>Database of systematic mutant phenotypes in yeast</h1>
 
 <div class="row">
   <section class="col-md-7">
