--- a/conditions/templates/conditions/index.html
+++ b/conditions/templates/conditions/index.html
@@ -2,15 +2,11 @@
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Conditions</title>
 {% include "head.html" with JavaScript='tablesorter' %}
-<script>$(document).ready(function(){ 
- $("#papersTable").tablesorter(); 
-});</script>
-</head><body><div class="container-fluid">
+<div class="container-fluid">
 
-<hgroup>
-  <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> /</nav>
-  <h1>Conditions</h1>
-</hgroup>
+<ol class="breadcrumb">
+  <li>Conditions</li>
+</ol>
 
 {% if conditiontype_list %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
@@ -50,4 +46,10 @@
 <aside class="bg-warning">No papers are available.</aside>
 {% endif %}
 {% include "footer.html" %}
-</div>{# container #}</body></html>
+</div{# container-fluid #}>
+
+<script>$(document).ready(function(){
+ $("#papersTable").tablesorter();
+});</script>
+
+</body></html>
