--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-{% include "head.html" with JavaScript='tablesorter' %}
 <title>{{ SITE_NAME }} / Papers / {{ object }}</title>
-<script>$(document).ready(function(){ 
- $("#papersTable").tablesorter({headers:{
-  3:{sorter:false},
-  4:{sorter:false}
- }});
-});</script>
-</head><body><div class="container-fluid">
+{% include "head.html" with JavaScript='tablesorter' %}
+<div class="container-fluid">
 
- <hgroup>
-   <nav><a href="{% url 'index' %}">{{ SITE_NAME }}</a> / <a href="{% url 'papers:all' %}">Papers</a> /</nav>
-   <h1>{{ object }}</h1>
- </hgroup>
+<ol class="breadcrumb">
+  <li><a href="{% url 'papers:all' %}">Papers</a></li>
+  <li>{{ object }}</li>
+</ol>
 
 <div class="row">
   <div class="col-md-8">{% if 0 != object.pmid %}
@@ -79,4 +73,13 @@
 <aside class="bg-warning">No datasets are loaded.</aside>
 {% endif %}
 {% include "footer.html" %}
-</div>{# container #}</body></html>
+</div>{# container-fluid #}
+
+<script>$(document).ready(function(){
+ $("#papersTable").tablesorter({headers:{
+  3:{sorter:false},
+  4:{sorter:false}
+ }});
+});</script>
+
+</body></html>
