--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -1,24 +1,12 @@
 {# {% load sub_navigation %} #}{% load my_filters %}<!DOCTYPE html>
 <html lang="en"><head>
-{% include "head.html" with JavaScript='tablesorter' %}
 <title>{{ SITE_NAME }} / Papers</title>
-<script>
-$(document).ready(function(){ 
- $("#papersTable").tablesorter(); 
-});</script>
-</head><body><div class="container-fluid">
+{% include "head.html" with JavaScript='tablesorter' %}
+<div class="container-fluid">
 
-<div class="row">
-  <hgroup class="col-md-7">
-    <nav><a href="{% url 'index' %}{{ got }}">{{ SITE_NAME }}</a> / </nav>
-    <h1>Papers</h1>
-  </hgroup>
-
-  <aside class="col-md-5">
-    {% include "search.html" %}
-  </aside>
-</div>{# row #}
-
+<ol class="breadcrumb">
+  <li>Papers</li>
+</ol>
 
 {% if papers_list %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
@@ -79,4 +67,11 @@ $(document).ready(function(){
 <aside class="bg-warning">No papers are available.</aside>
 {% endif %}
 {% include "footer.html" %}
-</div>{# container #}</body></html>
+</div{# container-fluid #}>
+
+<script>
+$(document).ready(function(){
+ $("#papersTable").tablesorter();
+});</script>
+
+</body></html>
