--- a/templates/head.html
+++ b/templates/head.html
@@ -2,14 +2,40 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-{% if JavaScript %}
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-{% if 'bootstrap' in JavaScript %}
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-{% endif %}
-{% if 'tablesorter' in JavaScript %}
+{% if JavaScript %}{% if 'tablesorter' in JavaScript %}
 <script src="{% static 'jquery.tablesorter.min.js' %}"></script>
 <link rel="stylesheet" href="{% static 'tablesorter.css' %}">
-{% endif %}
-{% endif %}
+{% endif %}{% endif %}
 <link rel="stylesheet" href="{% static 'yp.css' %}">
+</head><body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nb-1">
+	<span class="sr-only">What?</span>
+	<span class="icon-bar"></span>
+	<span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{% url 'index' %}">{{ SITE_NAME }}</a>
+    </div{# navbar-header #}>
+
+    <div class="collapse navbar-collapse" id="nb-1">
+      <ul class="nav navbar-nav">
+	<li><a href="{% url 'papers:all' %}">Papers</a></li>
+	<li><a href="{% url 'phenotypes:index' %}">Phenotypes</a></li>
+	<li><a href="{% url 'conditions:index' %}">Experimental conditions</a></li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search" action="{% url 'papers:all' %}" method="GET">
+	<div class="form-group">
+	  <input type="search" name="s" value="{{ s }}">
+	</div>
+	<button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div{# nb-1 #}>
+
+  </div{# container-fluid #}>
+</nav>
