--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -2,12 +2,24 @@
 <html lang="en"><head><title>{{ SITE_NAME }}</title>
 {% include "head.html" %}
 <div class="container-fluid">
+  <h1>Database of systematic mutant phenotypes in yeast</h1>
 
-<h1>Database of systematic mutant phenotypes in yeast</h1>
+  <aside class="pull-right">
+    <p>Current status for data collection:</p>
+    <ul>
+      <li>{{ paper_num_total }} <a href="{% url 'papers:all' %}">papers</a>{% if request.GET.verbose >= 1 %}, {{ paper_num_with_data }} have data{% endif %}</li>
+      <li>{{ phenotype_num_total }} <a href="{% url 'phenotypes:index' %}">phenotypes</a>{% if request.GET.verbose >= 1 %}, {{ phenotype_num_with_data }} have data{% endif %}</li>
+      <li>{{ condition_num }} <a href="{% url 'conditions:index' %}">experimental conditions</a></li>
+    </ul>
 
-<div class="row">
-  <section class="col-md-7">
+    {% if request.GET.verbose >= 1 %}<ul class="list-unstyled">
+      <li>Most studied phenotype: {{ most_studied_phenotype.link_detail|safe }} ({{ most_studied_phenotype.num_datapoints }} datapoints).</li>
+      <li>Most studied experimental condition: {{ most_studied_conditionset.name }} ({{ most_studied_conditionset.num_datapoints }} datapoints).<li>
+    </ul>{% endif %}
+    <p>Updated on: {{ updated }}.</p>
+  </aside>
 
+  <section>
     <p>We are collecting phenotypic data derived from <strong>systematic screens</strong> of large-scale <strong>mutant collections</strong> in budding yeast <em>Saccharomyces cerevisiae</em>. Our goal is to study the relationship between different mutant phenotypes and integrate them into mapping of the functional organization of biological pathways.</p>
 
     <p>We are interested in both <strong>quantitative</strong> and <strong>qualitative</strong> phenotypes, as long as, for a given study, the data were collected systematically and for a large number of mutants.</p>
@@ -16,32 +28,13 @@
 
     <p>As of today, we are at the data gathering stage. The plan is to collect, organize and share in a <strong>standardized format</strong> all of the phenotypic data obtained by the yeast community. Updates on progress will be released via this website.</p>
 
-  </section{# col-md-7 #}><div class="col-md-5">
-    <aside>{% include "search.html" %}</aside>
-
-    <aside>
-      <p>Current status for data collection:</p>
-      <ul>
-	<li>{{ paper_num_total }} <a href="{% url 'papers:all' %}">papers</a>{% if request.GET.verbose >= 1 %}, {{ paper_num_with_data }} have data{% endif %}</li>
-	<li>{{ phenotype_num_total }} <a href="{% url 'phenotypes:index' %}">phenotypes</a>{% if request.GET.verbose >= 1 %}, {{ phenotype_num_with_data }} have data{% endif %}</li>
-	<li>{{ condition_num }} <a href="{% url 'conditions:index' %}">experimental conditions</a></li>
-      </ul>
-      
-      {% if request.GET.verbose >= 1 %}<ul class="list-unstyled">
-	<li>Most studied phenotype: {{ most_studied_phenotype.link_detail|safe }} ({{ most_studied_phenotype.num_datapoints }} datapoints).</li>
-	<li>Most studied experimental condition: {{ most_studied_conditionset.name }} ({{ most_studied_conditionset.num_datapoints }} datapoints).<li>
-      </ul>{% endif %}
-      <p>Updated on: {{ updated }}.</p>
-    </aside>
-
-  </div{# col-md-5 #}>
-</div{# row #}>
-{% include "footer.html" with JavaScript="bootstrap" %}
-<script>
+  </section>
+  {% include "footer.html" with JavaScript="bootstrap" %}
+</div{# container-fluid #}><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-48000664-1', 'yeastphenome.org');
   ga('send', 'pageview');
-</script></div{# container #}></body></html>
+</script></body></html>
