--- a/static/yp.css
+++ b/static/yp.css
@@ -1,9 +1,9 @@
 body{
-    margin-top:2em;
+    padding-top:70px;
 }
 .container-fluid{
-    margin-left:10%;
-    margin-right:10%;
+    margin-left:5%;
+    margin-right:5%;
 }
 aside{
     margin-bottom:20px;
