my second attempt to close out issue #22

--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -1,7 +1,7 @@
 {# {% load sub_navigation %} #}{% load my_filters %}<!DOCTYPE html>
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Papers</title>
-{% include "head.html" with JavaScript='tablesorter' %}
+{% include "head.html" with JavaScript='tablesorter' active='papers' %}
 <div class="container-fluid">
 
 <ol class="breadcrumb">
