--- a/phenotypes/templates/phenotypes/detail.html
+++ b/phenotypes/templates/phenotypes/detail.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}{% load string_multiply %}<!DOCTYPE html>
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Phenotypes / {{ object|capfirst }}</title>
-{% include "head.html" with JavaScript='tablesorter' %}
+{% include "head.html" with JavaScript='tablesorter' active='phenotypes' %}
 <div class="container-fluid">
   
 <ol class="breadcrumb">
