--- a/phenotypes/templates/phenotypes/index.html
+++ b/phenotypes/templates/phenotypes/index.html
@@ -1,7 +1,7 @@
 {% load mptt_tags %}{% load string_multiply %}{# load my_filters #}<!DOCTYPE html>
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Phenotypes</title>
-{% include "head.html" with JavaScript='tablesorter' %}
+{% include "head.html" with JavaScript='tablesorter' active='phenotypes' %}
 <div class="container-fluid">
 
 <ol class="breadcrumb">
