--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Conditions / {{ object|capfirst }}</title>
-{% include "head.html" with JavaScript='tablesorter' %}
+{% include "head.html" with JavaScript='tablesorter' active='conditions' %}
 <div class="container-fluid">
 
 <ol class="breadcrumb">
