--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Papers / {{ object }}</title>
-{% include "head.html" with JavaScript='tablesorter' %}
+{% include "head.html" with JavaScript='tablesorter' active='papers' %}
 <div class="container-fluid">
 
 <ol class="breadcrumb">
