--- a/templates/head.html
+++ b/templates/head.html
@@ -11,11 +11,11 @@
 <link rel="stylesheet" href="{% static 'yp.css' %}">
 </head><body>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nb-1">
-	<span class="sr-only">What?</span>
+	<span class="sr-only">Sections</span>
 	<span class="icon-bar"></span>
 	<span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -31,7 +31,7 @@
       </ul>
       <form class="navbar-form navbar-right" role="search" action="{% url 'papers:all' %}" method="GET">
 	<div class="form-group">
-	  <input type="search" name="s" value="{{ s }}" style="width:10ex">
+	  <input type="search" name="s" value="{{ s }}" class="form-control" placeholder="search">
 	</div>
 	<button type="submit" class="btn btn-default">Submit</button>
       </form>
