issue #22 finally actually closed

--- a/static/yp.css
+++ b/static/yp.css
@@ -6,7 +6,7 @@ body{
     margin-right:5%;
 }
 aside{
-    margin-bottom:20px;
+    margin:7px;
     padding:20px;
     background-color:whitesmoke;
 }
