--- a/templates/head.html
+++ b/templates/head.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="nb-search">
       <form class="navbar-form navbar-right" role="search" action="{% url 'papers:all' %}" method="GET">
 	<div class="form-group">
-	  <input type="search" name="s" value="{{ s }}" class="form-control" placeholder="search">
+	  <input type="search" name="s" value="{{ s }}" class="form-control" placeholder="Search">
 	</div>
 	<button type="submit" class="btn btn-default">Submit</button>
       </form>
