fixed up some typos

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -28,12 +28,12 @@
     <tr>
       <th>Phenotypes</th>
       <th>Conditions</th>
-      <th>Collected</th>
-      <th>Tested space</th>
+      <th>Collection</th>
+      <th>Tested genes</th>
       {% if request.GET.verbose >= 1 %}
       <th>Tested Published / Available / Status</th>
       {% endif %}
-      <th>Data Type</th>
+      <th>Data type</th>
       {% if request.GET.verbose >= 1 %}
       <th>Data Measured / Published</th>
       <th>Has data</th>
