--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -31,14 +31,13 @@
       <th>Collection</th>
       <th>Tested genes</th>
       {% if request.GET.verbose >= 1 %}
-      <th>Tested Published / Available / Status</th>
+      <th>Tested genes Published / Available / Status</th>
       {% endif %}
       <th>Data type</th>
       {% if request.GET.verbose >= 1 %}
       <th>Data Measured / Published</th>
       <th>Has data</th>
       {% endif %}
-
     </tr>
   </thead><tbody>
     {% for dataset in object.dataset_set.all %}
@@ -54,7 +53,7 @@
       {% endif %}
       <td>{{ dataset.data_available|capfirst }}</td>
       {% if request.GET.verbose >= 1 %}
-      <td>{{ dataset.data_measured|capfirst }}/{{ dataset.data_published|capfirst }}</td>
+      <td>{{ dataset.data_measured|capfirst }} / {{ dataset.data_published|capfirst }}</td>
       <td>{{ dataset.has_data }}</td>
       {% endif %}
     </tr>
