--- a/phenotypes/templates/phenotypes/detail.html
+++ b/phenotypes/templates/phenotypes/detail.html
@@ -25,45 +25,41 @@
 
 {% if object.datasets %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
+    {% if request.GET.verbose >= 1 %}
+    <col/>
+    <col class="bg-info"/>
+    <col/>
+    <col/>
+    <col/>
+    <col class="bg-info"/>
+    <col/>
+    <col class="bg-info"/>
+    {% endif %}
   <thead>
     <tr>
       <th>Paper</th>
-      <th>Phenotype (variant)</th>
-      <th>Condition set</th>
+      {% if request.GET.verbose >= 1 %}<th>Phenotype (varient)</th>{% endif %}
+      <th>Conditions</th>
       <th>Collection</th>
-      <th>Type of data</th>
-      {% if request.GET.verbose >= 1 %}
       <th>Tested genes</th>
-      <th>Tested genes published</th>
-      <th>Tested genes available</th>
-      <th>Data measured</th>
-      <th>Data published</th>
-      {% endif %}
+      {% if request.GET.verbose >= 1 %}<th>Tested genes Published / Available</th>{% endif %}
+      <th>Data type</th>
+      {% if request.GET.verbose >= 1 %}<th>Data source</th>{% endif %}
     </tr>
   </thead><tbody>
     {% for dataset in object.datasets %}
     <tr>
       <td class="text-nowrap">{{ dataset.paper.link_detail|safe }}</td>
-      <td>{{ dataset.phenotype }}</td>
+      {% if request.GET.verbose >= 1 %}<td>{{ dataset.phenotype }}</td>{% endif %}
       <td>{{ dataset.conditionset }}</td>
       <td>{{ dataset.collection }}</td>
-      <td>{{ dataset.data_available|capfirst }}
-        <br>{{ dataset.data_source|safe }}
-        <br>{{ paper.latest_data_status|capfirst }}
-      </td>
-      {% if request.GET.verbose >= 1 %}
       <td>{{ dataset.tested_num }}</td>
-      <td>{{ dataset.tested_genes_published|yesno|capfirst }}</td>
-      <td>
-        {% if not dataset.tested_source %}
-        No
-        {% else %}
-        {{ dataset.tested_source|safe }}<br>{{ paper.latest_tested_status|capfirst }}
-        {% endif %}
-      </td>
-      <td>{{ dataset.data_measured|capfirst }}</td>
-      <td>{{ dataset.data_published|capfirst }}</td>
+      {% if request.GET.verbose >= 1 %}
+      <td>{{ dataset.tested_genes_published|yesno|capfirst }} /
+	{{ dataset.tested_source|safe }}</td>
       {% endif %}
+      <td>{{ dataset.data_available|capfirst }}</td>
+      {% if request.GET.verbose >= 1 %}<td>{{ dataset.data_source|safe }}</td>{% endif %}
     </tr>
     {% endfor %}
   </tbody>
