fixed up the verbose view a bit.

--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -34,7 +34,7 @@
     <th>Phenotype</th>
     <th>Collection</th>
     <th>Tested genes</th>
-    {% if request.GET.verbose >= 1 %}<th>Tested: <ul>
+    {% if request.GET.verbose >= 1 %}<th>Tested genes: <ul>
 	<li>published</li>
 	<li>available</li>
     </ul></th>{% endif %}
