--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -30,14 +30,17 @@
       <th>Conditions</th>
       <th>Collection</th>
       <th>Tested genes</th>
-      {% if request.GET.verbose >= 1 %}
-      <th>Tested genes Published / Available / Status</th>
-      {% endif %}
+      {% if request.GET.verbose >= 1 %}<th>Tested genes: <ul>
+	  <li>published</li>
+	  <li>available</li>
+	  <li>status</li>
+      </ul></th>{% endif %}
       <th>Data type</th>
-      {% if request.GET.verbose >= 1 %}
-      <th>Data Measured / Published</th>
-      <th>Has data</th>
-      {% endif %}
+      {% if request.GET.verbose >= 1 %}<th>Data: <ul>
+	  <li>measured</li>
+	  <li>published</li>
+	  <li>data</li>
+      </ul></th>{% endif %}
     </tr>
   </thead><tbody>
     {% for dataset in object.dataset_set.all %}
@@ -46,16 +49,17 @@
       <td>{{ dataset.conditionset }}</td>
       <td>{{ dataset.collection }}</td>
       <td>{{ dataset.tested_num }}</td>
-      {% if request.GET.verbose >= 1 %}
-      <td>{{ dataset.tested_genes_published|yesno|capfirst }} /
-	{{ dataset.tested_source|safe }} /
-	{{ paper.latest_tested_status|capfirst }}</td>
-      {% endif %}
+      {% if request.GET.verbose >= 1 %}<td><ul>
+	  <li>{{ dataset.tested_genes_published|yesno|capfirst }}</li>
+	  <li>{{ dataset.tested_source|safe }}</li>
+	  <li>{{ paper.latest_tested_status|capfirst }}</li>
+      </ul></td>{% endif %}
       <td>{{ dataset.data_available|capfirst }}</td>
-      {% if request.GET.verbose >= 1 %}
-      <td>{{ dataset.data_measured|capfirst }} / {{ dataset.data_published|capfirst }}</td>
-      <td>{{ dataset.has_data }}</td>
-      {% endif %}
+      {% if request.GET.verbose >= 1 %}<td><ul>
+	  <li>{{ dataset.data_measured|capfirst }}</li>
+	  <li>{{ dataset.data_published|capfirst }}</li>
+	  <li>{{ dataset.has_data }}</li>
+      </ul></td>{% endif %}
     </tr>
     {% endfor %}
   </tbody>
