--- a/phenotypes/templates/phenotypes/detail.html
+++ b/phenotypes/templates/phenotypes/detail.html
@@ -42,9 +42,16 @@
       <th>Conditions</th>
       <th>Collection</th>
       <th>Tested genes</th>
-      {% if request.GET.verbose >= 1 %}<th>Tested genes Published / Available</th>{% endif %}
+      {% if request.GET.verbose >= 1 %}<th>Tested genes: <ul>
+	  <li>published</li>
+	  <li>available</li>
+      </ul></th>{% endif %}
       <th>Data type</th>
-      {% if request.GET.verbose >= 1 %}<th>Data source</th>{% endif %}
+      {% if request.GET.verbose >= 1 %}<th>Data: <ul>
+	  <li>measured</li>
+	  <li>published</li>
+	  <li>source</li>
+      </ul></th>{% endif %}
     </tr>
   </thead><tbody>
     {% for dataset in object.datasets %}
@@ -54,12 +61,17 @@
       <td>{{ dataset.conditionset }}</td>
       <td>{{ dataset.collection }}</td>
       <td>{{ dataset.tested_num }}</td>
-      {% if request.GET.verbose >= 1 %}
-      <td>{{ dataset.tested_genes_published|yesno|capfirst }} /
-	{{ dataset.tested_source|safe }}</td>
+      {% if request.GET.verbose >= 1 %}<td><ul>
+	  <li>{{ dataset.tested_genes_published|yesno|capfirst }}</li>
+	  <li>dataset.tested_source|safe</li>
+      </ul></td>
       {% endif %}
       <td>{{ dataset.data_available|capfirst }}</td>
-      {% if request.GET.verbose >= 1 %}<td>{{ dataset.data_source|safe }}</td>{% endif %}
+      {% if request.GET.verbose >= 1 %}<td><ul>
+	  <li>{{ dataset.data_measured|capfirst }}</li>
+	  <li>{{ dataset.data_published|capfirst }}</li>
+	  <li>{{ dataset.data_source|safe }}</li>
+      </ul></td>{% endif %}
     </tr>
     {% endfor %}
   </tbody>
