allow collapsing the abstract

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -19,7 +19,7 @@
     <dt class="remove_on_error">Title</dt><dd class="remove_on_error" itemprop="TI">&#8987;</dd>
     <dt class="remove_on_error">Full author list</dt><dd class="remove_on_error" itemprop="FAU">&#8987;</dd>
     <dt class="remove_on_error">Citation</dt><dd class="remove_on_error" itemprop="CRDT">&#8987;</dd>
-    <dt class="remove_on_error">Abstract</dt><dd class="remove_on_error" itemprop="AB">&#8987;</dd>
+    <dt id="abstract" class="remove_on_error">Abstract <span class="view glyphicon glyphicon-eye-open"></span></dt><dd class="remove_on_error" itemprop="AB">&#8987;</dd>
   </ul>
   {% endif %}
 </section>
