--- a/templates/head.html
+++ b/templates/head.html
@@ -22,10 +22,7 @@
       </button>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nb-sections">
 	<span class="sr-only">Sections</span>
-	<span class="icon-bar"></span>
-	<span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+	<span class="glyphicon glyphicon-menu-hamburger"></span>
       </button>
       <a class="navbar-brand" href="{% url 'index' %}">{{ SITE_NAME }}</a>
     </div{# navbar-header #}>
