--- a/static/yp.css
+++ b/static/yp.css
@@ -59,6 +59,11 @@ thead td{
 [itemscope=paper] #abstract{
     cursor:pointer;
 }
+
+[itemscope=paper] ol{
+    margin-bottom:0;
+}
+
 [itemscope=paper] li:after{
     content:'\00A0\00A0\2022';
 }
